add style.css, connect to index.html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="style.css">
         <title>My Personal Website</title>
     </head>
     <body>
         <h1>Hello World!</h1>
+        <h3>Showcasing HTML</h3>
+            <p>In this website, I will use a variety of styles to bring <em>life</em> into this page.</p>
     </body>
 </html>
