add script.js, connect to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Hello World!</h1>
+        <script src="script.js"></script>
         <h3>Showcasing HTML</h3>
             <p>In this website, I will use a variety of styles to bring <em>life</em> into this page.</p>
     </body>
