--- a/index.html
+++ b/index.html
@@ -6,8 +6,29 @@
     </head>
     <body>
         <h1>Hello World!</h1>
-        <script src="script.js"></script>
-        <h3>Showcasing HTML</h3>
-            <p>In this website, I will use a variety of styles to bring <em>life</em> into this page.</p>
+            <br>
+            <br>
+        <h3 id="intro">From Then to Now</h3>
+            <p>Life has gone full circle. I first started my own personal blog called <em>"NATURALIGNMENT"</em> back in 2014 
+        when I was aspiring to be a health coach. I dabbled with HTML and CSS through Wordpress, which made life a bit easier for me.
+        However, I still had to Google the basics and nevertheless learned a good amount from the project. Fast forward
+        8 years later, here I am creating a website from scratch.</p>
+            <br>
+        <h3 id="fun-int">The Fun & Interactive Section</h3>
+           <table>
+               <tr>
+                  <td id="click"><strong>CLICK HERE</strong> for a message.</td>
+                  <td id="hover"><strong>HOVER OVER</strong> for a surprise.</td>
+               </tr>
+               <tr>
+                  <td id="up"><strong>KEYPRESS UP</strong> here for a yup.</td>
+                  <td id="down"><strong>KEYPRESS DOWN</strong> here for a frown.</td>
+               </tr>
+               <tr>
+                  <td id="left"><strong>KEYPRESS LEFT</strong> here for a chef.</td>
+                  <td id="right"><strong>KEYPRESS RIGHT</strong> here for a fright.</td>                
+               </tr>
+           </table>
+        <script src="script.js"></script>             
     </body>
 </html>
