circle & nav links & edited script tag

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <script src="script.js" defer></script>
         <link rel="stylesheet" href="style.css">
         <title>My Personal Website</title>
     </head>
@@ -10,9 +11,11 @@
             <br>
         <h3 id="intro">From Then to Now</h3>
             <p>Life has gone full circle. I first started my own personal blog called <em>"NATURALIGNMENT"</em> back in 2014 
-        when I was aspiring to be a health coach. I dabbled with HTML and CSS through Wordpress, which made life a bit easier for me.
+        when I was aspiring to be a health coach. I dabbled with HTML and CSS through Wordpress, which made life a bit easier for me while learning.
         However, I still had to Google the basics and nevertheless learned a good amount from the project. Fast forward
-        8 years later, here I am creating a website from scratch.</p>
+        8 years later, here I am creating a website from scratch.
+            </p>
+        <div class="circle"></div>    
             <br>
         <h3 id="fun-int">The Fun & Interactive Section</h3>
            <table>
@@ -28,7 +31,14 @@
                   <td id="left"><strong>KEYPRESS LEFT</strong> here for a chef.</td>
                   <td id="right"><strong>KEYPRESS RIGHT</strong> here for a fright.</td>                
                </tr>
-           </table>
-        <script src="script.js"></script>             
+           </table>    
+        <br>
+        <br>
+        <ul class="nav">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#health">Health</a></li>  
+            <li><a href="#contact">Contact</a></li>
+         </ul>          
     </body>
 </html>
