header & text styling changes

--- a/index.html
+++ b/index.html
@@ -7,17 +7,16 @@
     </head>
     <body>
         <h1>Hello World!</h1>
-            <br>
-            <br>
-        <h3 id="intro">From Then to Now</h3>
+        <br>
+        <h2 id="intro">From Then to Now</h2>
             <p>Life has gone full circle. I first started my own personal blog called <em>"NATURALIGNMENT"</em> back in 2014 
-        when I was aspiring to be a health coach. I dabbled with HTML and CSS through Wordpress, which made life a bit easier for me while learning.
-        However, I still had to Google the basics and nevertheless learned a good amount from the project. Fast forward
-        8 years later, here I am creating a website from scratch.
+        when I was aspiring to be a health coach. I have dabbled with HTML and CSS through Wordpress, which made life a bit easier for me while learning.
+        However, I still had to <a href="https://www.google.com" target="_blank">Google</a> the basics and nevertheless learned a good amount from the project. Fast forward
+        8 years later, here I am creating a website from scratch. My goal is to continue to spread the message about living a healthy, compassionate life through the use of technology. 
             </p>
         <div class="circle"></div>    
             <br>
-        <h3 id="fun-int">The Fun & Interactive Section</h3>
+        <h2 id="fun-int">The Fun & Interactive Section</h2>
            <table>
                <tr>
                   <td id="click"><strong>CLICK HERE</strong> for a message.</td>
@@ -35,10 +34,10 @@
         <br>
         <br>
         <ul class="nav">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#health">Health</a></li>  
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#home">HOME</a></li>
+            <li><a href="#about">ABOUT</a></li>
+            <li><a href="#health">HEALTH</a></li>  
+            <li><a href="#contact">CONTACT</a></li>
          </ul>          
     </body>
 </html>
