Added quotes section, clickable events, links, adjusted header

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         However, I still had to <a href="https://www.google.com" target="_blank">Google</a> the basics and nevertheless learned a good amount from the project. Fast forward
         8 years later, here I am creating a website from scratch. My goal is to continue to spread the message about living a healthy, compassionate life through the use of technology. 
             </p>
-        <div class="circle"></div>    
-            <br>
+        <a href="https://earth.google.com/" target="_blank"><div class="circle"></div></a>   
+        <br><br>
         <h2 id="fun-int">The Fun & Interactive Section</h2>
            <table>
                <tr>
@@ -31,13 +31,37 @@
                   <td id="right"><strong>KEYPRESS RIGHT</strong> here for a fright.</td>                
                </tr>
            </table>    
-        <br>
+        <br><br><br>
+        <h2>Motivational Quotes</h2>
+            <p style="font-family: Georgia, 'Times New Roman', Times, serif; text-align: justify; text-indent: 0%;">
+               <q>Strength does not come from the physical capability. It comes from an indomitable will.</q> 
+                <br>
+                <strong style="font-size: smaller; color: green">-Gandhi</strong>
+                <br><br>
+                <q>Everything we see is a shadow cast by that which we do not see.</q>
+                <br>
+                <strong style="font-size: smaller; color: green">-Martin Luther King, Jr.</strong>
+                <br><br>
+                <q>A good traveler has no fixed plans, and is not intent upon arriving.</q>
+                <br>
+                <strong style="font-size: smaller; color: green">-Lao Tzu</strong>
+                <br><br>
+                <q>An investment in knowledge pays the best interest.</q>
+                <br>
+                <strong style="font-size: smaller; color: green">-Benjamin Franklin</strong>
+                <br><br>
+                <q>One of the greatest pleasures is to be more or less un-conscious of one's own existence, to be absorbed in interesting sights, sounds, places, and people. 
+                Conversely, one of the greatest pains is to be self-conscious, to feel unabsorbed and cut off from the community and the surroundings.</q>
+                <br>   
+                <strong style="font-size: smaller; color: green">-unknown</strong>
+                <br><br>   
+            </p>
         <br>
         <ul class="nav">
-            <li><a href="#home">HOME</a></li>
-            <li><a href="#about">ABOUT</a></li>
-            <li><a href="#health">HEALTH</a></li>  
-            <li><a href="#contact">CONTACT</a></li>
-         </ul>          
+            <li id="home"><a href="#home">HOME</a></li>
+            <li id="about"><a href="#about">ABOUT</a></li>
+            <li id="health"><a href="#health">HEALTH</a></li>  
+            <li id="contact"><a href="#contact">CONTACT</a></li>
+        </ul>          
     </body>
 </html>
