added prompt and keydown events

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
             <p>Life has gone full circle. I first started my own personal blog called <em>"NATURALIGNMENT"</em> back in 2014 
         when I was aspiring to be a health coach. I have dabbled with HTML and CSS through Wordpress, which made life a bit easier for me while learning.
         However, I still had to <a href="https://www.google.com" target="_blank">Google</a> the basics and nevertheless learned a good amount from the project. Fast forward
-        8 years later, here I am creating a website from scratch. My goal is to continue to spread the message about living a healthy, compassionate life through the use of technology. 
+        8 years later, here I am creating a website from scratch. My goal is to continue to spread the message about living a healthy, compassionate life through the use of technology.
+        It starts with one act of compassion at a time. 
             </p>
+        <br><br>
         <a href="https://earth.google.com/" target="_blank"><div class="circle"></div></a>   
         <br><br>
         <h2 id="fun-int">The Fun & Interactive Section</h2>
@@ -56,6 +58,10 @@
                 <strong style="font-size: smaller; color: green">-unknown</strong>
                 <br><br>   
             </p>
+        <br>
+        <div id='formDiv'>
+            <h2 id="formHeader">This section will contain a form</h2>
+        </div>
         <br>
         <ul class="nav">
             <li id="home"><a href="#home">HOME</a></li>
